[package]
name = "qt_rit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
anyhow = "1"
kube = { version = "0.74", features = [ "client", "ws" ] }
k8s-openapi = { version = "0.15.0", features = ["v1_22"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1.3"

[patch.crates-io]
kube = { path = "/Users/khodzha/programming/khodzha/kube-rs/kube" }

[build-dependencies]
qt_ritual_build = "0.5.0"
